gitpos-infra/03-network/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster09
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: cluster09.podzone.cloud
    name: cluster09-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: cluster09.podzone.cloud
    name: cluster09-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: cluster09-secret
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
  - cluster09.podzone.cloud
  parentRefs:
  - name: cluster09
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
